# travAIlle

./: .env
job-board-voice/: .env.example  .gitignore  DEMO_GUIDE.md  README.md  apache2-proxy.conf  docker-compose.yml  nginx-proxy.conf  pyproject.toml  requirements.txt  sample-cv-english.txt  start.sh  test-translations.html  test.html  test_chat.py  test_german.py  test_mcp_elevenlabs.py  test_mcp_protocol.py
job-board-voice/backend/: main.py
job-board-voice/docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.mcp  entrypoint.sh  nginx.conf
job-board-voice/frontend/: apply.html  demo.html  index.html  sample-cv-german.txt
job-board-voice/frontend/css/: corporate-styles.css  styles.css
job-board-voice/frontend/js/: application.js  chat-interface.js  config.js  elevenlabs-integration.js  internal-application.js  internal-jobs.js  jobs.js  language-switcher.js  translations.js
job-board-voice/mcp-server/: elevenlabs_compatible_mcp.py  internal_mobility_server.py  job_board_mcp.py  job_board_mcp_clean.py  requirements.txt  server.py  simple_server.py  working_server.py  working_sse_server.py
