[project]
name = "job-board-voice"
version = "1.0.0"
description = "Internal Career Mobility Platform with Claude AI Assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "redis==5.0.1",
    "httpx==0.25.2",
    "pydantic==2.5.2",
    "python-dotenv==1.0.0",
    "websockets==12.0",
    "anthropic==0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.12.0",
    "pylint==3.0.3",
    "ruff==0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "black>=23.12.0",
    "ruff>=0.1.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]